added question screen html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
                 </div>
             </section>
             <!--Question Screen-->
+            <section id="question-screen">
+                <div class="row">
+                    <p id="randomQuestion" class="justify-content-center"></p>
+                    <div class="justify-content-center">
+                        <p><button id="a1" class="btn btn-secondary"></button></p>
+                        <p><button id="a2" class="btn btn-secondary"></button></p>
+                        <p><button id="a3" class="btn btn-secondary"></button></p>
+                        <p><button id="a4" class="btn btn-secondary"></button></p>
+                    </div>
+                    <div id="correct-incorrect">
+                        <hr>
+                    </div>
+                </div>
+            </section>
             <!--End Screen-->
             <!--Highscore Screen-->
         </div>
