hiscore screen added to html

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
                 </div>
             </section>
             <!--Highscore Screen-->
+            <section id="highscore">
+                <h2>High Scores</h2>
+                <div id="score-list" class="list-group list-group-flush"></div>
+
+                <p>
+                    <button type="submit" class="btn btn-warning" id="go-back">Go Back</button>
+                    <button type="submit" class="btn btn-danger" id="clear-scores">Clear High Scores</button>
+                </p>
+            </section>
         </div>
     </main>
 </body>
