--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -77,4 +78,7 @@
             </section>
         </div>
     </main>
+
+    <script src="./assets/script.js"></script>
 </body>
+</html>
